<resources>
    <string name="app_name">Ramsun</string>
    <string name="text">Hello World</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email address</string>
    <string name="email_address_capital">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="email_address_or_phone_number">Email address</string>
    <string name="streamline_your_mobility_expenses_with_budget_management">Streamline your mobility expenses\nwith budget management</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_your_email_or_phone_number_and_we_will_send_you_a_code_in_order_to_n_reset_your_password">Enter your email and we will send you a code in order to reset your password</string>
    <string name="request_otp">Request OTP</string>
    <string name="sent_to_you_on_your_registered_n_email_address_phone_number"><![CDATA[Sent to you on your registered\n email address & phone number]]></string>
    <string name="resend_passcode">Resend passcode</string>
    <string name="submit">Submit</string>
    <string name="enter_6_digit_code">Enter 6 digit code</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_has_been_updated_successfully_login_with_the_new_password_to_continue">Your password has been updated \nsuccessfully. Login with the new \n password to continue.</string>
    <string name="continue_">Continue</string>
    <string name="email_sent">Email Sent</string>
    <string name="we_have_sent_you_a_reset_password_code_on_your_registered_email_address">We have sent you a reset password code on your registered email address.</string>
    <string name="continue_to_login">"Continue To Login "</string>
    <string name="connect">Connect</string>
    <string name="enter_sub_domain_name">Sub domain name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="please_enter_a_valid_email_address_or_number">Please enter a valid email address or number.</string>
    <string name="please_enter_the_email_address">Please enter the email address.</string>
    <string name="please_enter_the_email_address_or_number">Please enter the email address or number.</string>
    <string name="please_enter_the_password">Please enter the password.</string>
    <string name="please_enter_the_new_password">Please enter the new password.</string>
    <string name="please_enter_the_current_password">Please enter the current password.</string>
    <string name="please_enter_the_password_in_a_valid_format">Please enter the password in a valid format</string>
    <string name="please_enter_the_password_the_same_as_the_new_password_field">Please enter the password the same as the new password field.</string>
    <string name="please_enter_the_otp">Please enter the OTP.</string>
    <string name="please_enter_the_platform_url">Please enter the sub domain name.</string>
    <string name="please_enter_proper_url">Please enter proper platform URL.</string>
    <string name="home">Home</string>
    <string name="invoice">Invoice</string>
    <string name="invoices">Invoices</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="total_budget">Total Budget</string>
    <string name="budget_group_management">Budget Group Management</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="legends">Legends</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="date_range">Date Range</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_name_hint">Enter the supplier name</string>
    <string name="status">Status</string>
    <string name="categories">Categories</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="recent_invoices">Recent Invoices</string>
    <string name="budget_groups">Budget Groups</string>
    <string name="welcome_back_martin">Welcome Back, Martin!</string>
    <string name="text_note">Note: The password should contain at least 8 characters, 1 digit, 1 lowercase letter, 1 uppercase letter &amp; 1 special character including (@!#$%^&amp;*();\'.,/?&gt;&lt;)</string>
    <string name="text_welcome_note">Note: Refer to your onboarding email to locate the \"Sub Domain Name\".</string>
    <string name="all_invoice">All Invoices</string>
    <string name="no_data_found">No data</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="category_details">Category Details</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="_11">11</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="_01_07_2023">01.07.2023</string>
    <string name="vat_no_or_tax_id">Vat No.</string>
    <string name="vat_no">VAT No.</string>
    <string name="de0290302902">DE0290302902</string>
    <string name="service_date">Service Date</string>
    <string name="supplier_name_address">Supplier Address</string>
    <string name="yes">yes</string>
    <string name="_250_00">250,00</string>
    <string name="net_amount">Net Amount</string>
    <string name="gross_amount">Gross Amount</string>
    <string name="currency">Currency</string>
    <string name="tax_percentage">Tax % :</string>
    <string name="uploaded_date">Uploaded Date</string>
    <string name="paid_by">Paid By</string>
    <string name="expense_for">Expense For</string>
    <string name="eur">EUR - (€)</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="_45_00">45,00</string>
    <string name="_03_07_2023">03.07.2023</string>
    <string name="self">Self</string>
    <string name="press_again_to_exit">Press Again To Exit</string>
    <string name="business">Business</string>
    <string name="welcome_back">Welcome Back, %1$s!</string>
    <string name="welcome_">Welcome, %1$s!</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_profile">My profile</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="select_month_amp_year"><![CDATA[Select Month & Year]]></string>
    <string name="change_password">Change password</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_about_us">About Us</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="log_out">Log out</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Street address</string>
    <string name="assigned_budged_groups">Assigned budget groups</string>
    <string name="additional_role">Additional role</string>
    <string name="update_profile">Update</string>
    <string name="user_first_last_name">%1$s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="crop_image">Crop Image</string>
    <string name="preferred_language">Preferred language</string>
    <string name="amount_format">Amount format</string>
    <string name="reset_your_account_password_nusing_below_fields">Reset your account password using below fields</string>
    <string name="current_password">Current password</string>
    <string name="push_notifications">Push notifications</string>
    <string name="change_language">Change language</string>
    <string name="need_support">Need support? Contact us!</string>
    <string name="subject">Subject</string>
    <string name="message_here">Message here</string>
    <string name="budget_group">Budget Group</string>
    <string name="text_bill_status">● %1$s</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="first_name_is_required">First name cannot be empty.</string>
    <string name="first_names_cannot_contain_special_characters_or_numbers">First names cannot contain special characters or numbers.</string>
    <string name="the_last_name_is_required">Last name cannot be empty.</string>
    <string name="the_last_name_cannot_contain_special_characters_or_numbers">The last name cannot contain special characters or numbers.</string>
    <string name="a_phone_number_is_required">Phone number cannot be empty.</string>
    <string name="address_is_required">Street Address cannot be empty.</string>
    <string name="select_preferred_language">Select Preferred Language</string>
    <string name="select_amount_format">Select Preferred Number Format</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="english_100_000_00">English (100,000.00)</string>
    <string name="german_100_00_00">German (100.000,00)</string>
    <string name="en">en</string>
    <string name="de">de</string>
    <string name="subject_is_required">Subject is required.</string>
    <string name="message_is_required">Message is required.</string>
    <string name="diplay_role">%1$s</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logging_out">Logging Out?</string>
    <string name="alert_logout">Are you sure you want to log out from the mobility application?</string>
    <string name="make_all_as_read">Mark all as read</string>
    <string name="notifications">Notifications</string>
    <string name="_0">0</string>
    <string name="message">%1$s</string>
    <string name="the_real_benefit_amp_data_connection"><![CDATA[The Real Benefit & Data Connection.]]></string>
    <string name="mobility_data_and_software_development">Mobility data and software development</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="please_enter_your_valid_mobile_number">Please enter your valid mobile number.</string>
    <string name="details_about_the_invoice">Details about the invoice</string>
    <string name="who_paid_for_the_receipt">Who paid for the receipt?</string>
    <string name="my_self">My Self</string>
    <string name="my_employer">My Employer</string>
    <string name="what_was_the_expense_for">What was the expense for?</string>
    <string name="private_">Private</string>
    <string name="no_internet">No internet</string>
    <string name="try_again">Try Again</string>
    <string name="close">Close</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="mobility_and_sustainability_budget">Mobility and Sustainability Budget</string>
    <string name="btg">BTG</string>
    <string name="center">Center</string>
</resources>