<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
        android:gravity="center">

    <ImageView
        android:id="@+id/iv_no_data"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_circle"
        android:backgroundTint="@color/color_primary_5"
        android:scaleType="centerInside"
        android:src="@drawable/ic_network_signal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNoInternet"
            style="@style/poppins_semi_bold_600_20"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/iv_no_data"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="?editTextColor"
            android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNo"
        style="@style/poppins_medium_500_14"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/txtNoInternet"
        android:gravity="center"
        android:text="@string/please_check_your_internet_connection_and_try_again"
        android:textColor="?editTextColor"
        android:alpha="0.6"
        android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_close_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/blue_button_style"
                android:text="@string/close"
                android:visibility="gone"
                android:backgroundTint="@color/warm_grey"
                android:padding="15dp"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_open_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/try_again"
                android:gravity="center"
                style="@style/blue_button_style"
                android:backgroundTint="@color/color_primary"
                android:padding="15dp"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
