<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot"
            style="@style/poppins_bold_700_30"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/forgot_password_"
            android:textColor="?colorTextView"
            app:layout_constraintEnd_toEndOf="@id/gl_right"
            app:layout_constraintStart_toStartOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_enter_your"
            style="@style/poppins_regular_400_14"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/enter_your_email_or_phone_number_and_we_will_send_you_a_code_in_order_to_n_reset_your_password"
            android:textColor="?colorTextView"
            app:layout_constraintEnd_toEndOf="@id/gl_right"
            app:layout_constraintStart_toStartOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            style="@style/text_input_layout_edit"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_51sdp"
            android:hint="@string/email_address_or_phone_number"
            app:layout_constraintEnd_toEndOf="@id/gl_right"
            app:layout_constraintStart_toStartOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_your">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tel_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email_error"
            style="@style/poppins_regular_400_12"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_email_address"
            android:textColor="@color/color_error"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/tl_email"
            app:layout_constraintStart_toStartOf="@id/tl_email"
            app:layout_constraintTop_toBottomOf="@id/tl_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_request_otp"
            style="@style/blue_button_style"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/request_otp"
            app:layout_constraintEnd_toEndOf="@id/gl_right"
            app:layout_constraintStart_toStartOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/tv_email_error" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
