<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.sidemenu.contactus.ContactUsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_15sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_15sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lorem"
        style="@style/poppins_regular_400_20"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/need_support"
        android:textColor="?colorTextView"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_subject"
        style="@style/text_input_layout_edit"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_31sdp"
        android:hint="@string/subject"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/tv_lorem">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tel_subject"
            android:layout_width="match_parent"
            android:maxLength="100"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subject_error"
        style="@style/poppins_regular_400_12"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/color_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/tl_subject"
        app:layout_constraintStart_toStartOf="@id/tl_subject"
        app:layout_constraintTop_toBottomOf="@id/tl_subject" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_message_here"
        style="@style/text_input_layout_edit"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/message_here"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/tv_subject_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tel_message_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="6"
            android:maxLength="1000"
            android:maxLines="6"
            android:singleLine="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message_error"
        style="@style/poppins_regular_400_12"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/color_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/tl_message_here"
        app:layout_constraintStart_toStartOf="@id/tl_message_here"
        app:layout_constraintTop_toBottomOf="@id/tl_message_here" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/blue_button_style"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/tl_message_here" />

</androidx.constraintlayout.widget.ConstraintLayout>